--- a/IS3-ArcGIS/IS3-ArcGIS.csproj
+++ b/IS3-ArcGIS/IS3-ArcGIS.csproj
@@ -35,12 +35,8 @@
   <ItemGroup>
     <Reference Include="Esri.ArcGISRuntime, Version=10.2.5.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Output\libs\arcgis\Esri.ArcGISRuntime.dll</HintPath>
+      <HintPath>..\Output\libs\Esri.ArcGISRuntime.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="IS3.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Output\bin\IS3.Core.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -64,6 +60,13 @@
     <Compile Include="Graphics\IS3Renderer.cs" />
     <Compile Include="Graphics\IS3Symbol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IS3-Core\IS3-Core.csproj">
+      <Project>{4b8b162c-3658-4fcc-ab41-c0c85a7db281}</Project>
+      <Name>IS3-Core</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
