--- a/IS3-Desktop/IS3-Desktop/IS3-Desktop.csproj
+++ b/IS3-Desktop/IS3-Desktop/IS3-Desktop.csproj
@@ -66,22 +66,13 @@
     </Reference>
     <Reference Include="Esri.ArcGISRuntime, Version=10.2.5.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Output\libs\arcgis\Esri.ArcGISRuntime.dll</HintPath>
+      <HintPath>..\..\Output\libs\Esri.ArcGISRuntime.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Interop.UnityWebPlayerAXLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\Output\libs\Interop.UnityWebPlayerAXLib.dll</HintPath>
-    </Reference>
-    <Reference Include="IS3.ArcGIS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Output\bin\IS3.ArcGIS.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="IS3.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Output\bin\IS3.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -98,16 +89,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="UnityCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Output\libs\UnityCore.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Output\libs\UnityEngine.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -483,9 +464,18 @@
     <Resource Include="Images\text.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="is3_64.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\IS3-ArcGIS\IS3-ArcGIS.csproj">
       <Project>{3e9a8ded-38b8-4050-849c-08957aeb5fbf}</Project>
       <Name>IS3-ArcGIS</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\IS3-Core\IS3-Core.csproj">
+      <Project>{4b8b162c-3658-4fcc-ab41-c0c85a7db281}</Project>
+      <Name>IS3-Core</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\IS3-Python\IS3-Python\IS3-Python.csproj">
       <Project>{e6f7f4ad-0e87-45d7-bd80-d66c99379692}</Project>
@@ -495,10 +485,8 @@
     <ProjectReference Include="..\..\IS3-Unity-Webplayer\IS3-Unity-Webplayer.csproj">
       <Project>{9d38c271-eb97-46d0-862e-8dd70d3f13d1}</Project>
       <Name>IS3-Unity-Webplayer</Name>
+      <Private>False</Private>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="is3_64.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
